Add Google webmaster verification meta

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -110,6 +110,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset={{ encoding }}" />
+    <meta name="google-site-verification" content="m_R3ysKlXK0LcYZqQicoIkI3_uCDNwzlErI0t9G7iyg" />
     {{ metatags }}
     {%- block htmltitle %}
     <title>{{ title|striptags|e }}{{ titlesuffix }}</title>
