--- a/_templates/phraseanet/layout.html
+++ b/_templates/phraseanet/layout.html
@@ -199,8 +199,8 @@
   {%- block footer %}
       <div class="footer">
         <div class="languages">
-          <a href="/en/"><span>English</span></a>
-          <a href="/fr/"><span>Français</span></a>
+          <a href="/3.6/en/"><span>English</span></a>
+          <a href="/3.6/fr/"><span>Français</span></a>
         </div>
       {%- if show_copyright %}
           {% trans copyright=copyright %}&copy; Copyright {{ copyright }}.{% endtrans %}
