--- a/_templates/phraseanet/layout.html
+++ b/_templates/phraseanet/layout.html
@@ -112,7 +112,7 @@
 		    HAS_SOURCE: {{ has_source|lower }}
 		  };
 		</script>
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 		<script type="text/javascript" src="{{ pathto('_static/bootstrap.js', 1) }}"></script>
 		{%- for scriptfile in script_files %}
 		<script type="text/javascript" src="{{ pathto(scriptfile, 1) }}"></script>
