--- a/_templates/phraseanet/searchbox.html
+++ b/_templates/phraseanet/searchbox.html
@@ -11,8 +11,8 @@
 <div id="searchbox" class="well">
   <h3>{{ _('Quick search') }}</h3>
     <form class="search" action="{{ pathto('search') }}" method="get">
-      <input type="text" name="q" class="input-medium" />
-      <input type="submit" class="btn btn-primary" value="{{ _('Go') }}"/>
+      <input type="text" class="span2 inputSearch" name="q" class="input-medium" />
+      <input type="submit" class="btn btn-primary inputSearch" value="{{ _('Go') }}"/>
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
     </form>
