--- a/_templates/phraseanet/layout.html
+++ b/_templates/phraseanet/layout.html
@@ -96,6 +96,7 @@
 				<ul class="dropdown-menu span1">
 					<li><a href="/3.5">Phraseanet 3.5</a></li>
 					<li><a href="/3.6">Phraseanet 3.6</a></li>
+					<li><a href="/3.7">Phraseanet 3.7</a></li>
 				</ul>
 			</div>
 		</div>
@@ -250,8 +251,8 @@
             {%- block footer %}
             <div class="footer">
                 <div class="languages">
-                    <a href="/3.6/en/"><span>English</span></a>
-                    <a href="/3.6/fr/"><span>Français</span></a>
+                    <a href="/3.7/en/"><span>English</span></a>
+                    <a href="/3.7/fr/"><span>Français</span></a>
                 </div>
                 {%- if show_copyright %}
                 {% trans copyright=copyright %}&copy; Copyright {{ copyright }}.{% endtrans %}
