Add fork me on github ribbon

--- a/_templates/phraseanet/layout.html
+++ b/_templates/phraseanet/layout.html
@@ -185,6 +185,9 @@
     <body>
         <!--<div id="wrapper">-->
         {%- block navigation %}
+        <a href="https://github.com/you">
+            <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub">
+        </a>
         <div id="navbar" class="navbar">
         	<div class="navbar-inner">
         		<div class="container">
@@ -198,10 +201,10 @@
 	                    {{ toctree(collapse=True, maxdepth=-1, titles_only=False) }}
 	                </div>
 	                <div class="nav-collapse">
-		                <ul class="nav pull-right">
+		                <ul class="nav pull-right" style="margin-right:90px;">
 		                	<li class="divider-vertical"></li>
 		                	<li class="dropdown">
-		                		<a href="#" id="ddLinks" class="dropdown-toggle" data-toggle="dropdown">Liens<b class="caret"></b></a>
+		                		<a href="#" id="ddLinks" class="dropdown-toggle" data-toggle="dropdown">Links<b class="caret"></b></a>
 		                		<ul class="dropdown-menu">
 		                			<li><a href="http://www.phraseanet.com" target="_blank">Phraseanet</a></li>
 		                			<li><a href="http://www.alchemy.fr/" target="_blank">Alchemy</a></li>
