--- a/_templates/phraseanet/layout.html
+++ b/_templates/phraseanet/layout.html
@@ -185,7 +185,7 @@
     <body>
         <!--<div id="wrapper">-->
         {%- block navigation %}
-        <a href="https://github.com/you">
+        <a href="https://github.com/alchemy-fr/Phraseanet-Docs">
             <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub">
         </a>
         <div id="navbar" class="navbar">
