--- a/_templates/phraseanet/layout.html
+++ b/_templates/phraseanet/layout.html
@@ -98,6 +98,7 @@
 					<li><a href="/3.6">Phraseanet 3.6</a></li>
 					<li><a href="/3.7">Phraseanet 3.7</a></li>
 					<li><a href="/3.8">Phraseanet 3.8</a></li>
+					<li><a href="/4.0">Phraseanet 4.0</a></li>
 				</ul>
 			</div>
 		</div>
