--- a/_templates/phraseanet/layout.html
+++ b/_templates/phraseanet/layout.html
@@ -281,11 +281,38 @@
 
         </div><!-- /container-->
         <script type="text/javascript">
+
           $(document).ready(function(){
+
+          	/**
+			 * Remove /4.0 url prefix for local test
+			 */
+			let removePrefixNumberURL = function()
+			{
+			 	if(window.location.port !== 80)
+			 	{
+			 	 	let anchorList = document.querySelectorAll('a');
+
+			 	 	for(let i in anchorList)
+			 	 	{
+						/** {Element} anchor */
+			 	 		let anchor = anchorList[i];
+
+			 	 		if(anchor.href !== undefined)
+						{
+							anchor.href = anchor.href.replace('/4.0/', '/');
+						}
+			 	 	}
+			 	}
+			}
+
             if(window.console)
               console.log('loaded');
               $('#navigation li a').wrapInner('<span>');
+
+			  removePrefixNumberURL();
           });
+
           var _gaq = _gaq || [];
           _gaq.push(['_setAccount', 'UA-3475486-25']);
           _gaq.push(['_setDomainName', '.phraseanet.com']);
@@ -296,6 +323,7 @@
             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
           })();
+
 
         </script>
     </body>
