Checked links of "Developper", "FAQ", "Glossary" and "Contributor" EN entries

--- a/_templates/phraseanet/layout.html
+++ b/_templates/phraseanet/layout.html
@@ -280,6 +280,7 @@
             {%- endblock %}
 
         </div><!-- /container-->
+					<style>a{border: 3px solid red !important;}</style>
         <script type="text/javascript">
 
           $(document).ready(function(){
