--- a/_templates/phraseanet/layout.html
+++ b/_templates/phraseanet/layout.html
@@ -280,9 +280,9 @@
             {%- endblock %}
 
         </div><!-- /container-->
-					<style>a{border: 3px solid red !important;}</style>
-        <script type="text/javascript">
 
+        <script type="text/javascript">
+//<style>a{border: 3px solid red !important;}</style>
           $(document).ready(function(){
 
           	/**
